@@ -1,6 +1,14 @@
+2005-03-21  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-RC3-b12
+
+	* Fix: check_mail.php wasn't globalized
+
+	* Change: rss.php - use <pb:width>... instead of attributes
+
+	* Fix: Custom regenerate_session_id didn't work on Win32
+
 2005-03-18  Jens A. Tkotz <jens@peino.de>  1.5-cvs-RC3-b11
 
-	* Fix: I am too stupid to shit. Forgot a $ in b10 fix for the b4 fix.
+	* Fix: Forgot a $ in b10 fix for the b4 fix.
 
 2005-03-18  Jens A. Tkotz <jens@peino.de>  1.5-cvs-RC3-b10
 
